DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Sep-04-2007 patrick     Use new environment variable SNX_DATA_DIR as a way to
                        look up files in SNX_BASE_DIR/share/sonix.
                        NEW VERSION: 1.3.3
Sep-04-2007 patrick     Set SNX_BASE_DIR automatically on all platforms.
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory.
                        NEW VERSION: 1.3.2
Jun-26-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for SNX_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and SNX_OPT or JUGGLER_OPT instead
                        of _OPT).
                        NEW VERSION: 1.3.1
Apr-18-2007 patrick     VR Juggler 2.2 branch created.
                        NEW VERSION: 1.3.0