@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Sep-25-2007 patrick     The methods of snx::sonix are no longer virtual.
+                        NEW VERSION: 1.3.4
 Sep-04-2007 patrick     Use new environment variable SNX_DATA_DIR as a way to
                         look up files in SNX_BASE_DIR/share/sonix.
                         NEW VERSION: 1.3.3
